test/tests/stages/18_structures/invalid_parse/struct_decl_kw_wrong_order.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  identifier(s)
  struct
  identifier(x)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
